--- a/Scripts/Paper Markdown.Rmd
+++ b/Scripts/Paper Markdown.Rmd
@@ -21,13 +21,13 @@ library(rdd)
 library(splines)
 library(stargazer)
 ```
-```{r,cache=T}
+```{r,eval=FALSE}
 #cps <- read.csv("../Data/cps_transformed.csv")
 ```
 
 
 
-```{r basic-income-distribution}
+```{r basic-income-distribution,eval=FALSE}
 #cps %>%
 #  filter(AGE < 55) %>%
 #  filter(INCTOT < 2e05 & INCTOT > 100) %>%
@@ -42,7 +42,7 @@ library(stargazer)
 #  geom_vline(xintercept =1.38*21720)
 ```
 
-```{r bunching}
+```{r bunching,eval=FALSE}
 #cps %>%
 #  filter(AGE > 25 & AGE < 50) %>%
 #  filter(UHRSWORKLY != 999) %>%
@@ -59,7 +59,7 @@ library(stargazer)
 #  ylab("Proportion")+xlab("Medicaid cutoff difference")+ggtitle("Income distribution Centered Around Medicaid Income Eligibility","Hourly workers aged 25-50")
 ```
 
-```{r bunching-zoomed-in}
+```{r bunching-zoomed-in,eval=FALSE}
 #cps %>%
 #  filter(AGE > 25 & AGE < 60) %>%
 #  filter(UHRSWORKLY != 999) %>%
@@ -77,9 +77,39 @@ library(stargazer)
 ```
 
 
-```{r}
+```{r,cache=TRUE}
 relevant_pop <- read.csv("../Data/relevant_pop.csv") %>%
-  mutate(SEX = SEX -1) 
+  mutate(female = ifelse(SEX == 2,1,0),
+         POST = ifelse(YEAR >= 2014,1,0),
+         l_INCWAGE = log(INCWAGE+1)) 
+
+relevant_pop_placebos <- read.csv("../Data/relevant_pop_placebos.csv") %>%
+  mutate(placebo_high = ifelse(mcaid_diff_fam > 15000,1,0),
+         placebo_low = ifelse(mcaid_diff_fam < -15000,1,0),
+         just_below = ifelse(mcaid_diff_fam >= -5000 & mcaid_diff_fam < 0,1,0),
+         just_above = ifelse(mcaid_diff_fam >= 0 & mcaid_diff_fam < 5000,1,0),
+         tri_weight = 1-abs(abs(0-mcaid_diff_fam)/10000),
+         tri_weight_ASEC = ASECWT * tri_weight,
+         quad_weight = 1-(mcaid_diff_fam^2)/(10000^2),
+         quad_weight_ASEC = ASECWT * quad_weight,
+         female = ifelse(SEX == 2,1,0))
+
+#relevant_pop_placebos <- cps %>%
+#  filter(AGE %in% c(26:60)) %>%
+#  filter(UHRSWORKLY != 999) %>%
+#  filter(mcaid_diff_fam < 20000 & mcaid_diff_fam > -20000) %>%
+#  filter(WORKLY == 2) %>%
+#  filter(DISABWRK == 1) %>%
+#  mutate(placebo_high = ifelse(mcaid_diff_fam > 10000,1,0),
+#        placebo_low = ifelse(mcaid_diff_fam < -10000,1,0),
+#         just_below = ifelse(mcaid_diff_fam >= -10000 & mcaid_diff_fam < 0,1,0),
+#         just_above = ifelse(mcaid_diff_fam >= 0 & mcaid_diff_fam < 10000,1,0),
+#         tri_weight = 1-abs((0-mcaid_diff_fam)/10000),
+#         tri_weight_ASEC = ASECWT * 1-abs((0-mcaid_diff_fam)/10000),
+#         quad_weight = 1-(mcaid_diff_fam^2)/(10000^2),
+#         quad_weight_ASEC = ASECWT * 1-(mcaid_diff_fam^2)/(10000^2),
+#         female = ifelse(SEX == 2,1,0))
+
 ####
 #
 # For resconstructing from scratch
@@ -89,7 +119,7 @@ relevant_pop <- read.csv("../Data/relevant_pop.csv") %>%
 #relevant_pop <- cps %>%
 #  filter(AGE %in% c(26:60)) %>%
 #  filter(UHRSWORKLY != 999) %>%
-#  filter(mcaid_diff_fam < 10000 & mcaid_diff_fam > -10000) %>%
+#  filter(mcaid_diff_fam < 20000 & mcaid_diff_fam > -20000) %>%
 #  filter(WORKLY == 2) %>%
 #  filter(DISABWRK == 1)
 ```
@@ -106,15 +136,13 @@ Given the stark cutoff of eligibility and relatively large income transfer that 
 
 I confirm this analysis by post-hoc constructing medicaid eligibility using reported income and family size (based on marriage and number of children) and computing the difference by state-year FPL cutoffs going back to 2004. From here, all family incomes can be normalized around a 0 point (exactly eligible for Medicaid). Analysis from the Kaiser Family foundation found that removal of the asset test only resulted in a 3% increase in uptake.
 
-### Definition of Population of Interest
+#### Definition of Population of Interest
 
 This study specifically analyzes the population of families within $10,000 of medicaid coverage in either direction. This is the rough estimate of the "medicaid gap" which conceptually developed alongside the ACA's implementation but existed before as well. Though a relatively arbitrary cutoff, the \$10,000 cutoff is made where those at the high end would qualify for ACA Silver Plan Benchmarks and Medicaid coverage would not be worth reducing income. Similarly, for the low end, \$10,000 represents adding 2 full 8-hour days of work at \$12/hr. This cutoff represents utting down all Americans to a reasonable population represents those who are certainly affected by Medicaid's income cutoff out to the edges of that income-qualification decision.
 
 The population of interest is workers age 26-60. This population represents those most closely on the margin of the Medicaid cutoff. By the same logic other studies cut off health outcomes at the near-Medicare cohort, this study rather focuses on those for whom exogenous health effects may play less of a role in labor decisions. The lower bound of 26 is chosen due to the ACA's rule allowing children to stay on parent's health insurance policy until 26, which would distort estimates. I further limit the data to those who worked within the past year and did not report disability income to focus on marginal hours and wages rather than entering the labor force.
 
 ```{r parallel-trends-avg-hrs}
-data.frame(colSums(is.na(relevant_pop))) %>% rename("count"=1) %>% arrange(desc(count))
-
 relevant_pop %>%
   mutate(spline = case_when(first_treated == 1 & YEAR < 2014 ~ "pre:treated",
                                first_treated == 0 & YEAR < 2014 ~ "pre:untreated",
@@ -208,7 +236,7 @@ For the purposes of this study, reported wage income is used, since it reduces r
 
 The next step is to statistically define these parallel trends using an event-study methodology to ensure there are measurable differences in the treated population over this time period for our variable of interest (Medicaid eligibility).
 
-### Methodology & Establishing Causal Baseline
+## Methodology & Establishing Causal Baseline
 
 The intention of the study is to focus on a more narrow question. For those near the Medicaid eligibility cutoff, did the "shock" of the ACA cause those around the cutoff to increase their economic output, as measured by weekly hours and total income from wages. 
 
@@ -320,40 +348,165 @@ relevant_pop %>%
   facet_wrap(~ name, scales = 'free', nrow = 2)+
   ggtitle("Discontinuity on demographic & economic variables")+
   ggthemes::theme_clean()
+
+rm(cps)
 ```
 
 
 #### Placebo & Weighting
-The process of post-constructing medicaid eligibility also yields a simple placebo mechanism by which the outcomes of a difference in differences can be measured. The standard conception of the medicaid gap is \$10,000, meaning those outside of that threshold on either side will not face the same kind of imminent consideration on labor decisions, but will still have similar demographics and constraints as those just over the \$10000 threshold.
+The process of post-constructing medicaid eligibility also yields a simple placebo mechanism by which the outcomes of a difference in differences can be measured. The standard conception of the medicaid gap is \$10,000, meaning those outside of that threshold on either side will not face the same kind of imminent consideration on labor decisions, but will still have similar demographics and constraints as those just over the \$10,000 threshold.
 
-Similarly, those closest to the Medicaid threshold could stand to gain the most from qualifying (or disqualifying) for Medicaid, which motivates the use of RDD-style triangular or quadratic weighting mechanism for those closest to that threshold to upweight the marginal decisions of those who are closest. This intuitively makes sense, since someone who merely needs to work one-fewer shifts per month, or one-fewer hours per week may opt to do so when that would qualify them for medicaid. Similarly, those who might have been bunching just-below the threshold have flexibility to work the corresponding marginal hour. On the contrary, few people (especially those for whom Medicaid is relevant) will not be able to simply "make" $5000 more dollars based on marginal labor decisions.
+Similarly, those closest to the Medicaid threshold could stand to gain the most from qualifying (or disqualifying) for Medicaid, which motivates the use of RDD-style triangular or quadratic weighting mechanism for those closest to that threshold to upweight the marginal decisions of those who are closest. This intuitively makes sense, since someone who merely needs to work one-fewer shifts per month, or one-fewer hours per week may opt to do so when that would qualify them for medicaid. Similarly, those who might have been bunching just-below the threshold have flexibility to work the corresponding marginal hour. On the contrary, few people (especially those for whom Medicaid is relevant) will not be able to simply "make" $5000 more dollars based on marginal labor decisions. 
 
-These will be included as robustness checks later in the paper.
+## Model Specification
 
-# Model Specification
+The first model employed is a standard difference-in-difference model to establish a relationship with respect to expansion. In this sample, only looking at states which expanded immediately after the law went into effect. Where each individual ($i$) in state ($s$) is treated at time ($t$) with controls for each state and year effects, as well as a vector of demographic control variables $\mu$. For this regression, using the formula:
 
-The first model employed is a standard difference-in-difference model to establish any relationship with respect to expansion. In this sample, only looking at states which expanded immediately after the law went into effect. For this regression,  using the formula:
-
-$$H_{i,s,t} = \alpha + \gamma \cdot Treat + \beta \cdot Post + \delta \cdot Treat \cdot Post + \mu_i + \epsilon $$
-```{r}
-relevant_pop <- relevant_pop %>% mutate(post = ifelse(YEAR >= 2014,1,0))
-basic_did <- formula(UHRSWORKLY ~ ever_treated * post + factor(STATEFIP) + factor(YEAR) + black + SEX + in_school + d_MARST + hourly + NCHILD)
-lm(data=relevant_pop,formula=basic_did) %>% summary()
-```
-
-
-
+$H_{i,s,t} = \alpha + \gamma \cdot Treat + \beta \cdot Post + \delta \cdot Treat \cdot Post + \mu_i + \epsilon$
 
 Second model employs the strategy highlighted in Black (2019) and Miller (2019), which accounts for lingering effects of treatment, setting "D" as a dummy representing ever receiving treatment and R representing a dummy for each relative event time. Using the formula:
 
-$$H_{i,t,s} = \alpha + \gamma*(D=1) + \delta (R_{t,s}=1) + \beta_s + \beta_t + \mu_{i} + \epsilon_{i,s,t}$$
+$H_{i,t,s} = \alpha + \gamma*(D=1) + \delta (R_{t,s}=1) + \beta_s + \beta_t + \mu_{i} + \epsilon_{i,s,t}$
 
-Where each individual ($i$) in state ($s$) is treated at time ($t$) with controls for each state and year effects, as well as a vector of demographic control variables.
+To estimate whether these effects are most prevalent on the margin, I employ a weighted regression model using both a triangular and quadratic scheme following the following formulas. A triangular scheme will greatly weight the effects for those closest to the relevant margin, while the quadratic model will maintain the weights for those slightly further away from the threshold.
+
+$W_{tri} = 1-\frac{abs(x)-10000}{10000} * W_{ASEC}$
+
+$W_q = 1-\frac{x^2}{10000^2} * W_{ASEC}$
+
+The weighting scheme equals 1 for those directly on the threshold, and eventually equals 0 for those furthest. This method is commonly employed in a regression discontinuity design, but is relevant in this case for isolating *whether* this effect is happening on the margin or across the entire workforce. By isolating this marginal movement as statistically distinct from the entire near-medicaid workforce, there is a stronger case to be made that the threshold itself is the cause of the behavior, not secular trends among all low-income individuals.
+
+```{r weighting-visual}
+relevant_pop_placebos %>%
+  select(mcaid_diff_fam,ASECWT,tri_weight_ASEC,quad_weight_ASEC) %>% 
+  mutate(rand = runif(nrow(relevant_pop_placebos))) %>% 
+  filter(rand < .1) %>% 
+  pivot_longer(cols=c(ASECWT,tri_weight_ASEC,quad_weight_ASEC)) %>%
+  ggplot()+
+  geom_point(aes(x=mcaid_diff_fam,y=value),alpha=.3)+
+  facet_grid(.~name)+xlim(-10000,10000)+ylim(0,25000)+
+  ggtitle("Weighting Schemes")
+```
+
+Finally, these models look at aggregate effects across the entire near-Medicaid workforce, including those above but near the threshold. This presents two key problems with causal inference. The near-medicaid population is, by definition, living near-poverty, meaning other state-level or macroeconomic changes may affect labor outcomes. Merely running the same regression on those strictly below the Medicaid threshold will increase the intensity of this selection effect. 
+
+Secondly, this data is not linked and the incomes measured in the data are within a tight band. Though incomes are relatively sticky, workers could easily have moved across or within the \$10,000 threshold region over the time period studied. To account for this, testing against incomes well-above the threshold will work against this effect, though not perfectly.
+
+To account for this, I employ a simple placebo testing framework. Setting a dummy variable equal to 1 if the observation is in the "above" threshold. With each observation taking a value of 1 or 0 for B = Placebo, P = Post, and T = Treat. 
+
+$H_{i,s,t} = \alpha + \theta_1 \cdot B + \theta_2 \cdot T + \theta_3 \cdot P + \theta_4 \cdot B \cdot T  + \theta_5 \cdot B \cdot P + \theta_6 \cdot T \cdot P + \theta_7 \cdot B \cdot T \cdot P+ \mu_i + \epsilon$
+
+$\theta_7$ is the triple-difference parameter of interest, which isolates the effect for low-income individuals against the effect for those sufficiently above the medicaid threshold. I also run this same model for those just above the medicaid threshold against those well-below to estimate whether those above adjusted income down to qualify for medicaid.
+
+## Results
 
 ```{r basic-did}
-did_event <- formula(UHRSWORKLY ~ ever_treated + TREATMENT:factor(REL_TIME) + factor(STATEFIP) + factor(YEAR) + black + SEX + in_school + d_MARST + hourly + NCHILD)
-lm(data=relevant_pop1,formula = did_basic,weights = ASECWT) %>% summary()
+basic_did <- formula(UHRSWORKLY ~ ever_treated * POST + factor(STATEFIP) + factor(YEAR) + black + in_school + d_MARST + hourly + insured + poly(AGE,2) +female*(NCHLT5 + NCHILD))
+basic_did_sum <- lm(data=relevant_pop,formula=basic_did,weights = ASECWT) 
 ```
+
+```{r relative-time-did}
+did_event <- formula(UHRSWORKLY ~ ever_treated + TREATMENT:factor(REL_TIME) + factor(STATEFIP) + factor(YEAR) + black + in_school + d_MARST + hourly + insured + poly(AGE,2) +female*(NCHLT5 + NCHILD))
+event_study_sum <- lm(data=relevant_pop,formula = did_event,weights = ASECWT)
+```
+
+```{r triangle-did}
+rp_wt <- relevant_pop_placebos %>%
+  filter(tri_weight > 0) 
+tri_did <- formula(UHRSWORKLY ~ ever_treated * POST + factor(STATEFIP) + factor(YEAR) + black +  in_school + d_MARST + hourly + insured + poly(AGE,2) +female*(NCHLT5 + NCHILD))
+tri_wt_summary <- lm(data=rp_wt,formula=did_event,weights = tri_weight_ASEC)
+```
+
+```{r quadratic-did}
+quad_did <- formula(UHRSWORKLY ~ ever_treated * POST + factor(STATEFIP) + factor(YEAR) + black + in_school + d_MARST + hourly + insured + poly(AGE,2) +female*(NCHLT5 + NCHILD))
+quad_wt_summary <- lm(data=rp_wt,formula=did_event,weights = quad_weight_ASEC)
+```
+
+#### Placebo Regressions
+
+```{r}
+rp_high <- relevant_pop_placebos %>%
+  filter(placebo_high == 1 | just_below == 1)%>%
+  rename("marginal_group"="just_below")
+
+placebo_high <- formula(UHRSWORKLY ~ ever_treated * POST * marginal_group + factor(STATEFIP) + factor(YEAR) + black + in_school + d_MARST + hourly + insured + poly(AGE,2) +female*(NCHLT5 + NCHILD))
+low_side_placebo <- lm(data=rp_high,formula = placebo_high,weights = ASECWT)
+
+rp_low <- relevant_pop_placebos %>%
+  filter(placebo_low == 1 | just_above == 1) %>%
+  rename("marginal_group"="just_above")
+placebo_low <- formula(UHRSWORKLY ~ ever_treated * POST * marginal_group + factor(STATEFIP) + factor(YEAR) + black + in_school + d_MARST + hourly + insured + poly(AGE,2) +female*(NCHLT5 + NCHILD))
+high_side_placebo <- lm(data=rp_low,formula = placebo_low,weights = ASECWT)
+```
+
+
+```{r}
+table1_keeporder = c("ever_treated:POST","TIME)0","TIME)1","TIME)2","TIME)3","TIME)4","TIME)5","Constant")
+table1_keepnames = c("DiD Estimator", "Year 0" ,"Year 1","Year 2","Year 3", "Year 4", "Year 5","Intercept")
+
+stargazer(basic_did_sum,event_study_sum,tri_wt_summary,quad_wt_summary,
+          title="Table 1: Diff-in-Diff Results",
+          align=TRUE,
+          column.labels = c("Basic DiD","Event Study","Triangular Weights","Quadratic Weights"),
+          dep.var.labels = "Weekly Hours",
+          keep.stat = c("n"),type = "text",
+          single.row = T,no.space = T,summary = T,
+          keep = table1_keeporder,covariate.labels = table1_keepnames)
+```
+
+Regardless of weighting scheme, the same 2-3 hour difference in hours shows up across each regression. This in important in two ways. First, it validates the theoretical notion that those closer to the relevant constraint will be more sensitive to it. 
+
+Secondly, the triangular weighting scheme's effectiveness both motivates and gives validity to a placebo test. Under a circumstance where those far from the cutoff are driving results, an effective placebo group would not be available. In this case, with the effect concentrated at the cutoff, those far from the cutoff can serve as a placebo.
+
+Table 2 shows two placebo tests, breaking out the group "just below" and "just above" the cutoff to further isolate the effects of expansion. Placebo groups were selected across the threshold and sufficiently far away.
+
+```{r}
+relevant_pop_placebos %>%
+  mutate(rand = runif(nrow(relevant_pop_placebos))) %>% 
+  filter(rand < .1) %>% 
+  mutate(TripDiff.group = case_when(just_above == 1 ~ "just above",
+                           placebo_high == 1 ~ "placebo high",
+                           placebo_low == 1 ~ "placebo low",
+                           just_below == 1 ~ "just below",
+                           TRUE ~ "not used")) %>%
+  ggplot()+
+  geom_point(aes(x=mcaid_diff_fam,y=UHRSWORKLY,color=TripDiff.group),alpha=.4)+
+  scale_color_manual(breaks = c("just above","placebo high","placebo low","just below","not used"),
+                     values = c("steelblue2","tomato4","steelblue4","tomato2","white"))+
+  geom_vline(xintercept = 0)+ggtitle("Placebo-Treatment pairs")+ylab("Weekly Hours")+xlab("Cutoff Difference")
+  
+```
+
+```{r}
+table2_keeporder <- c("Constant","Treatment","Post","Treated","Treatment * Post","Treatment * Treated","Post * Treated","Triple Difference")
+
+names(high_side_placebo$coefficients)[c(1:4,80:82,85)] <- table2_keeporder
+names(low_side_placebo$coefficients)[c(1:4,80:82,85)] <- table2_keeporder   
+stargazer(low_side_placebo,high_side_placebo,
+          type = "text",
+          single.row = T,
+          title = "Triple-Diff Results",
+          column.labels = c("Just Below","Just Above"),
+          dep.var.labels = "Weekly Hours",
+          keep = table2_keeporder,
+          align = T)
+```
+
+Table 2 shows a very different effect depending on the relationship to the medicaid cutoff. Those who are "just above" the cutoff reduce work hours by 3-5 hours per week while those "just below" increase hours by 1.5-2.5 hours. 
+
+### Conclusion
+
+Low-income people in the United States face an impossible set of circumstances for healthcare, especially those in or near the Medicaid Gap. The ACA's expansion of Medicaid eligibility to those at 138% of the federal poverty line represented a massive shift in access to medicine for some of the poorest families in America. 
+
+Previously it has been shown there is not a large amount of bunching along the Medicaid cutoff, partially due to the fluid nature of "potential" Medicaid coverage being enough for hospitals to treat patients. However, in the aggregate, there is evidence of people adjusting their behavior in response to the Medicaid cutoff. 
+
+Taking the placebo estimates from Table 2, the change in number of hours worked represents a substantial change in income over the year. By those estimates, at the average hourly wage for this cohort ($12), those "just below" the Medicaid cutoff increased yearly wages by \$1,200 while maintaining pseudo-coverage on Medicaid. 
+
+Perhaps more starkly, those "just above" the threshold reduced income by \$2,400. This is consistent with a rational, utility-maximizing consumer theory since the average cost of a health insurance plan is \$6,000.
+
+In a broader context, this shows the effectiveness of a healthcare system not linked to an employment scheme. Also, keeping in mind the kinds of positions which offer \$12/hr tend not to be positions which offer generous benefits packages. Across this cohort, the only "work reducing" effect of this program is for those reducing labor output in order to get access to healthcare. The oppressive costs of healthcare in the United States have a massive distortionary effect on labor output, as illustrated in this relatively small example. Under a similar theory of healthcare access as a preferred outcome of a utility-maximizing household, there is reason to believe a similar effect is taking place among those in higher income cohorts as well.
+
+
 
 NEEDS
 
